updated for Belinda's bar graphs and combined Aram's into main

--- a/la_crime.ipynb
+++ b/la_crime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "b5f5c2c7-cc59-4f63-bd30-5797acfc7a5d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "34cdb567-afb4-4033-8eb0-496049a05d4d",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "c2cb8301-426d-49a6-ac74-7446a72b9503",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "0f685ed9-4cd2-4c11-9e10-daf7967259d1",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "ead78bf5-f0df-4829-b121-62d0eefcb2c2",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "944235"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "7759234b-4e41-45a8-aeda-5d82985d6535",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "f8e717a6-672e-492a-9603-bfd34ac7617c",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "68244b32-0242-4b20-abde-81c0ba5ac531",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "56d9da56-632f-482b-a90e-58dafdfdb610",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "8ac5cb06-c9a7-41eb-b99c-91c75ec98b8f",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "9677f12f-4e09-4293-8ef8-1947cb6c6eb0",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "bf637ebc-c085-4495-8b15-da9a3a0b5f3f",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "8a5e8325-9ba3-4f08-8545-e78eeeea232d",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "06d2003f-f6f2-4ebf-8231-a9de003c6a3b",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "58fc32da-e8ea-4423-8216-694e173170e5",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "9b0a735d-ad3c-40c0-b3e7-c7bb87057c65",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "[20 rows x 29 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "08f93ec5-9e63-48f4-a17e-cc6e5a091e7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('postgresql://postgres:postgres@localhost:5432/la_crimes_db')\n",
     "conn = engine.connect()\n",
-    "df.to_sql('crimes_table', con=conn)\n",
+    "df.to_sql('crimes_table', con=conn, if_exists = 'replace')\n",
     "conn.close()"
    ]
   },
