Revert "final code for pie"
This reverts commit f78b3b3064b10f6d25f2566c9bb6bb3843c4995a.

--- a/la_crime.ipynb
+++ b/la_crime.ipynb
@@ -698,10 +698,7 @@
    "source": [
     "#change data type of integers\n",
     "#id, area, district_code, part_1_2, crime_code, mocodes, vict_age, premise code, weapon used code, crm_cd_1, crm_cd_2, crm_cd_3, crm_cd_4, lat, lon\n",
-    "df[['id', 'area', 'district_code', 'part_1_2', 'crime_code', 'vict_age', \n",
-    "    'premise_code', 'weapon_used_cd', 'crm_cd_1', 'crm_cd_2', 'crm_cd_3', 'crm_cd_4']]= \n",
-    "df[['id', 'area', 'district_code', 'part_1_2', 'crime_code', 'vict_age', \n",
-    "    'premise_code', 'weapon_used_cd', 'crm_cd_1', 'crm_cd_2', 'crm_cd_3', 'crm_cd_4']].astype('int64')"
+    "df[['id', 'area', 'district_code', 'part_1_2', 'crime_code', 'vict_age', 'premise_code', 'weapon_used_cd', 'crm_cd_1', 'crm_cd_2', 'crm_cd_3', 'crm_cd_4']]= df[['id', 'area', 'district_code', 'part_1_2', 'crime_code', 'vict_age', 'premise_code', 'weapon_used_cd', 'crm_cd_1', 'crm_cd_2', 'crm_cd_3', 'crm_cd_4']].astype('int64')"
    ]
   },
   {
@@ -770,9 +767,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "9b0a735d-ad3c-40c0-b3e7-c7bb87057c65",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1487,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
